--- a/style.css
+++ b/style.css
@@ -52,11 +52,30 @@ body {
   font-weight: 630;
 }
 .datosContacto {
+  width: 50%;
   background-color: rgb(129, 118, 104);
-  display: inline-block;
-  
-  
-}
-.direccion {
   display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  margin: 5%;
+}
+.datosContacto img {
+  width: 30%;
+}
+.menu {
+  background-color: rgb(129, 118, 104);
+  display: inline;
+  margin: 0.1%;
+  align-content: center;
+  width: 33.1%;
+  height: 250px;
+  float: left;
+  text-align: center;
+}
+.contactoContainer {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
 }
